# Stepic_C_Course

./: CMakeLists.txt  main.c
arrays/: array.c  array.h  array_array.c  array_array.h  data.txt
functions/: functions.c  functions.h  robot.c  robot.h
higher-order-functions/: list.c  main.c
linked list/: try_linked_lists.c  try_linked_lists.h
linked lists/: linked_list.c  linked_list.h
stack/: stack.c  stack.h
union&enum/: union.c  union.h
